# Almond

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DependencyList.txt  GenBuildFiles.sh  README.md
Source/: BuildConfig.h  CMakeLists.txt  adpch.h
Source/Almond/: main.cpp
Source/Almond/Core/: Application.cpp  Application.h  Base.h  Layer.h  LayerStack.cpp  LayerStack.h  Logging.cpp  Logging.h  base.h
Source/Almond/Debug/: Profiling.h
Source/Almond/Editor/: EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h
Source/Almond/Events/: Event.h  keyboard_events.h  mouse_events.h  window_events.h
Source/Almond/Graphics/: Mesh.cpp  Mesh.h  OrthographicCamera2D.cpp  OrthographicCamera2D.h  RenderAPI.cpp  RenderCapabilities.cpp  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h
Source/Almond/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  imgui_setup.cpp  imgui_setup.h
Source/Almond/Maths/: math.cpp  math.h
Source/Almond/Platform/Input/: Input.h  LinuxInput.cpp  LinuxInput.h  codes.h
Source/Almond/Platform/OpenGL/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Source/Almond/Platform/Windowing/: LinuxWindow.cpp  LinuxWindow.h  Window.h
Source/Almond/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
Source/Almond/Utilities/: holders.h
assets/shaders/: CubeModel.glsl  DefaultShader.glsl  DiffuseModel.glsl  EditorDiffuseModel.glsl
cmake/: appsources.cmake  deps.cmake
cmake/adapters/: glad.cmake  imgui.cmake  stb_image.cmake
src/almond/: main.cpp
src/almond/core/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Logging.cpp  Logging.h  PlatformDetection.h  Timestep.h  VertexArray.cpp  VertexArray.h  base.h
src/almond/editor/: EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  Entity.cpp  Entity.h  Mesh.cpp  Mesh.h  Scene.h
src/almond/events/: Event.h  keyboard_events.h  mouse_events.h
src/almond/input/: Input.h
src/almond/layers/: Layer.h  LayerStack.cpp  LayerStack.h
src/almond/rendering/: Camera.h  Entity.cpp  Entity.h  Framebuffer.cpp  Framebuffer.h  OrthographicCamera2D.cpp  RenderAPI.cpp  RenderAPI.h  RenderCapabilities.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/almond/ui/: ImGuiLayer.cpp  ImGuiLayer.h  imgui_setup.cpp  imgui_setup.h
src/almond/utils/: colors.h  demoapp.cpp  demoapp.h  holders.h  typedefs.h
src/platform/linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
src/tests/: imgui_example_glfw_opengl3.cpp  shader_file_loader.cpp
